feat: update less

--- a/src/pages/detail/advanced/index.less
+++ b/src/pages/detail/advanced/index.less
@@ -1,26 +1,31 @@
 @import '@/style/index';
+
 .t-tabs__content {
   padding-top: @spacer-3;
 }
+
 .t-layout--content-replace {
-  color: rgba(0, 0, 0, 0.6) !important;
+  color: rgba(0, 0, 0, .6) !important;
 }
 
 .row-padding {
   padding-top: 30px;
   padding-left: 20px;
 }
+
 .operater-block-container {
   padding: 10px 0 30px;
 }
+
 .operater-add {
   width: 100%;
-  height: 210px;
+  height: 256px;
   display: flex;
   align-items: center;
   justify-items: center;
   padding: 20px 10px 24px 20px;
   border: dashed 1px #dedede;
+  border-radius: 3px;
 
   .operater-sub {
     font-size: 14px;
@@ -29,15 +34,24 @@
     text-align: center;
     line-height: 22px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     cursor: pointer;
-    .t-icon {
-      color: @brand-color-8;
+
+    svg {
+
+      rect {
+        fill: @brand-color-2;
+      }
+
+      path {
+        fill: @brand-color;
+      }
     }
   }
 
   span {
-    padding-left: 10px;
+    padding-top: 12px;
   }
 }
 
@@ -46,41 +60,96 @@
 }
 
 .operater-block {
-  background-color: #EBEDF1;
-  padding: 20px 10px 24px 20px;
-  height: 210px;
+  position: relative;
+  background-color: #fff;
+  border: 1px solid #e3e6eb;
+  border-radius: 3px;
 
-  .operater-title {
-    display: flex;
-    align-items: center;
-    margin-bottom: 25px;
+  .operater-content {
+    padding: 20px 32px 24px 32px;
+    height: 256px;
 
-    h1 {
-      display: inline-block;
-      padding-left: 20px;
-      font-weight: bold;
-      font-size: 14px;
+    .operater-title {
+      margin-bottom: 25px;
+      position: relative;
+
+      h1 {
+        display: inline-block;
+        font-weight: 500;
+        font-size: 24px;
+      }
+
+      &-subtitle {
+        display: block;
+        font-weight: 400;
+        font-size: 14px;
+        width: 60%;
+        color: rgba(0, 0, 0, .4);
+      }
+
+      &-tag {
+        margin-right: 8px;
+      }
+
+      &-icon {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+      }
+
+      svg {
+
+        circle {
+          fill: @brand-color-2;
+        }
+
+        path {
+          fill: @brand-color;
+        }
+      }
+    }
+
+    .operater-item {
+      position: relative;
+      padding-top: 8px;
+      padding-bottom: 8px;
+
+      &-info {
+        display: inline-block;
+        width: 60%;
+        text-align: left;
+        font-size: 14px;
+        color: rgba(0, 0, 0, .4);
+      }
+
+      &-icon {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+      }
     }
   }
-  .operater-item {
-    padding-left: 48px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    display: flex;
-    h1 {
-      display: inline-block;
-      width: 136px;
-      text-align: left;
-      font-size: 14px;
-      color: rgba(0,0,0,0.60);
+
+  .operater-footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+
+    .t-progress--thin {
+      display: unset;
     }
-    span {
-      width: 100%;
+
+    &-percentage {
+      position: absolute;
+      bottom: 15px;
+      right: 32px;
+      color: rgba(0, 0, 0, .4);
     }
   }
 }
 
 .@{prefix} {
+
   &-panel {
     background-color: white;
     padding: @spacer-3;
@@ -98,8 +167,8 @@
   }
 
   &-operater-title {
-    font-size: 16px;
-    color: rgba(0, 0, 0, 0.9);
+    font-size: 20px;
+    color: rgba(0, 0, 0, .9);
     font-weight: bold;
   }
 
@@ -116,17 +185,32 @@
     padding: 12px 0;
     display: flex;
 
+    @media (max-width: @screen-sm-max) {
+
+      h1 {
+        width: 80px;
+      }
+    }
+
+    @media (min-width: @screen-md-min) {
+
+      h1 {
+        width: 200px;
+      }
+    }
+
     h1 {
-      width: 84px;
       font-family: PingFangSC-Regular;
       font-size: 14px;
       color: @text-color-secondary;
       text-align: left;
       line-height: 22px;
     }
+
     span {
       margin-left: 24px;
     }
+
     i {
       display: inline-block;
       width: 8px;
@@ -134,14 +218,17 @@
       border-radius: @border-radius-50;
       background: @success-color-5;
     }
+
     .inProgress {
       color: @success-color-5;
     }
+
     .pdf {
       color: @brand-color-8;
     }
   }
 }
+
 .dialog-info-block {
 
   .info-item {
@@ -156,9 +243,11 @@
       text-align: left;
       line-height: 22px;
     }
+
     span {
       margin-left: 24px;
     }
+
     i {
       display: inline-block;
       width: 8px;
@@ -166,9 +255,11 @@
       border-radius: @border-radius-50;
       background: @success-color-5;
     }
+
     .green {
       color: @success-color-5;
     }
+
     .blue {
       color: @brand-color-8;
     }
