--- a/src/pages/form/base/index.less
+++ b/src/pages/form/base/index.less
@@ -25,3 +25,154 @@
   color: @text-color-secondary;
   line-height: 20px;
 }
+
+.form-item-container {
+  display: flex;
+  // align-items: center;
+  justify-content: center;
+}
+
+.form-basic-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+
+  .span-item {
+    width: 12px;
+  }
+
+  .form-gap {
+    padding-left: 32px;
+  }
+
+  .row-gap {
+    padding-bottom: 24px;
+  }
+
+  .form-basic-item {
+    // padding: 0 60px 0 160px;
+
+    .form-basic-container-title {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 20px;
+      line-height: 22px;
+      color: rgba(0, 0, 0, .9);
+      padding: 64px 0 32px 0;
+    }
+
+    // .t-size-m {
+    //   width: 100% !important;
+    //   min-width: 280px;
+    // }
+
+    // .t-form-item__type {
+    //   // width: 100% !important;
+    //   min-width: 280px;
+    // }
+  }
+
+  .tdesign-pro-panel {
+    margin-top: 0px !important;
+  }
+
+  .t-textarea__inner {
+    height: 124px !important;
+  }
+
+  .form-cretifier {
+    font-size: 14px;
+    color: #000000;
+    padding-top: 24px;
+    padding-bottom: 130px;
+
+    .form-cretifier-container {
+      padding-top: 12px;
+
+      .form-cretifier-circle {
+        background: #0052d9;
+        border: 1px solid #a7a4a4;
+        border-radius: 40px;
+        width: 32px;
+        height: 32px;
+        color: #ffffff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        text-align: center;
+        line-height: 22px;
+        font-weight: 500;
+        position: absolute;
+      }
+
+      .form-cretifier-gap1 {
+        margin-left: 25px;
+      }
+
+      .form-cretifier-gap2 {
+        margin-left: 50px;
+      }
+
+      .form-cretifier-blure {
+        background: #d4e3fc;
+        color: #0052d9;
+      }
+    }
+  }
+}
+
+.form-submit-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 28px;
+  background-color: #e3e6eb;
+  border-bottom: solid 1px #d8dadf;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+
+  .form-submint-sub {
+    width: 676px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .form-submit-left {
+
+      .form-submit-upload-span {
+        font-size: 14px;
+        line-height: 22px;
+        color: rgba(0, 0, 0, .4);
+        padding-top: 8px;
+        display: inline-block;
+      }
+    }
+
+    .form-submit-upload-btn {
+      width: 144px;
+      height: 40px;
+    }
+
+    .form-submit-right {
+
+      .form-submit-cancel {
+        font-size: 16px !important;
+        color: #0052d9 !important;
+        background-color: #ebedf100 !important;
+      }
+
+      .form-submit-confirm {
+        font-size: 16px !important;
+        background: #0052d9 !important;
+        border-radius: 3px !important;
+        width: 80px !important;
+        height: 40px !important;
+      }
+    }
+  }
+}
