--- a/src/pages/detail/base/index.less
+++ b/src/pages/detail/base/index.less
@@ -16,7 +16,7 @@
 }
 
 .detail-base-panel {
-  background-color: white;
+  background-color: @bg-color-container;
   padding: @spacer-3 @spacer-4 @spacer-4 @spacer-4;
   border-radius: @border-radius;
   margin-top: 0;
