--- a/src/pages/detail/secondary/index.less
+++ b/src/pages/detail/secondary/index.less
@@ -1,7 +1,7 @@
 @import '@/style/variables.less';
 
 .secondary-notification {
-  background-color: white;
+  background-color: @bg-color-container;
   border-radius: @border-radius;
   padding: @spacer-3 @spacer-4;
 
