--- a/src/pages/form/base/index.less
+++ b/src/pages/form/base/index.less
@@ -7,7 +7,7 @@
 .@{prefix} {
 
   &-panel {
-    background-color: white;
+    background-color: @bg-color-container;
     padding: @spacer-3;
     border-radius: @border-radius;
   }
