--- a/src/pages/form/step/index.less
+++ b/src/pages/form/step/index.less
@@ -7,7 +7,7 @@
 .@{prefix} {
 
   &-panel {
-    background-color: white;
+    background-color: @bg-color-container;
 
     &.@{prefix}-step-panel {
       padding: 0;
