--- a/src/style/index.less
+++ b/src/style/index.less
@@ -6,7 +6,9 @@
 
 @import './font-family.less';
 
-@import './sidenav.less';
+@import './side-nav.less';
+
+@import './theme/index.less';
 
 body {
   color: @text-color-secondary;
@@ -118,7 +120,7 @@ p {
   display: flex;
   flex-direction: column;
 }
-.@{prefix}-sidenav-layout {
+.@{prefix}-sideNav-layout {
 
   &-relative {
     height: 100%;
