--- a/src/pages/dashboard/base/index.less
+++ b/src/pages/dashboard/base/index.less
@@ -1,17 +1,41 @@
 @import '@/style/index';
 
 @media (max-width: @screen-md-max) {
-
-
 }
 
 .t-tabs__content {
   padding-top: @spacer-3;
 }
 
+.card-title-text-default {
+  display: inline-block;
+  white-space: nowrap;
+}
+
+.card-option {
+  display: flex;
+  width: 100%;
+  align-items: center !important;
+  justify-content: right !important;
+
+  .dashboard-chart-title-left {
+    display: flex;
+    justify-content: left;
+    align-self: left;
+    width: 100%;
+    color: rgba(0, 0, 0, .4);
+    font-size: 15px;
+    padding-left: 8px;
+  }
+}
+
 .dashboard-panel {
   padding: 0;
   border-radius: @border-radius;
+
+  >div {
+    padding: 4px;
+  }
 
   .card-container {
 
@@ -20,6 +44,10 @@
       &-label-title {
         color: @text-color-primary;
         padding-bottom: 4px;
+      }
+
+      .t-table-content {
+        overflow: auto;
       }
     }
 
@@ -50,7 +78,6 @@
     flex-direction: row;
     align-items: flex-start;
 
-
     > span {
       display: inline-block;
       color: black;
@@ -64,12 +91,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  
+  align-items: center;
+
   > .t-icon {
     cursor: pointer;
     color: inherit;
   }
-
 }
 
 
@@ -106,9 +133,7 @@
         border-radius: @border-radius;
         margin-left: 16px;
         width: 100%;
-        // min-width: 300px;
         height: 320px;
-
       }
     }
 
@@ -257,12 +282,12 @@
     justify-content: center;
     width: 56px;
     height: 56px;
-    background: #ECF2FE;
+    background: @brand-color-1;
     border-radius: 50%;
 
     .t-icon {
       font-size: 24px;
-      color: #0052D9;
+      color: @brand-color;
     }
   }
 }
@@ -291,7 +316,7 @@
 }
 
 .overview-pannel {
-  background-color: white;
+  background-color: @bg-color-container;
   border-radius: 3px;
 }
 
