--- a/src/style/side-nav.less
+++ b/src/style/side-nav.less
@@ -16,7 +16,7 @@
     z-index: 100;
   }
 
-  &-sidenav {
+  &-sideNav {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -66,7 +66,7 @@
   }
 
 
-  &-sidenav-placeholder {
+  &-sideNav-placeholder {
     flex: 1 1 232px;
     min-width: 232px;
     transition: all .3s;
